# examples

./: .gitignore  README.org  session_active.go
ELF/: elf.c
HuangLi/: README.org  db.go  huangli.go  request.go
TLCP/: tlcp_client_handshake.go
TaskManager/: task.go
abi-struct-changed/: Makefile  README.org  README.tex  main.c
acpi-wakeup/: README.org  acpi_wakeup_workaround.sh  huawei_suspend_workaround.service
bluetooth/: huawei_question.org
cpp/: boost_log.cpp  class_thread.cpp  cmd_iter.cpp  cmd_thread.cpp  exec_cmd.cpp  exec_cmd_boost.cpp  exec_cmd_pstreams.cpp  mkdir.cpp  nlohman_json_soft_history.cpp  proc_cmd.cpp  read_symlink.cpp  sha.cpp  sha_blog.cpp  task_timer.cpp  threadpool.cpp  vector.cpp  vector_mem.cpp
cpp/UnitTest/: .gitignore  CMakeLists.txt  Makefile  catch_test.cpp  google_test.cpp  hostname.cpp  hostname.h
cpp/UnitTest/testdata/: hostname
docker/: docker-note.org
dpkgrepo/: _main.go  config.go  error.go  repo.yml  repository.go  utils.go
fanotify/: demo.c
go-module/: .gitignore  README.org
go-plugin/: main.go
godbus/: README.org  client.go  godbus.org  org.jouyouyun.Test.service  server.go
goquery/: cve_nvd.go
hardware/: lshw_parser.go  main.go
jenkins/: README.md  build.go
ld-preload/: .gitignore  README.md  hook-g_free.c  test.c
ldap/: .gitignore  ldap.go
libaudit/: main.c
libusb-1.x/: detach.c
llm/: gc_review-report_modify.md  gc_review-report_modify.py  gc_ut_scanner.md  gc_ut_scanner.py  public_domain_code_scanner.md  public_domain_code_scanner.py
misc/: struct_pointer.c
mmap/: devmem.c  (+1 more)
(+451 files in other folders)
